notes for next time

--- a/VowelEnt/code/notebooks/Class-Mar4.ipynb
+++ b/VowelEnt/code/notebooks/Class-Mar4.ipynb
@@ -751,17 +751,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##things to look at next\n",
+    "## things to look at next\n",
     "\n",
-    "contribution of the word\n",
-    "are certain vowel contrasts more informative than other: open/closed, lax/tense, high/low, individuals\n",
-    "phonemes are more likely to merge if they distinguish few minimal pairs: a/c vs. i/I, u/U, U/V\n",
-    "I/E before nasal+other consonant or word edge\n",
-    "U/u, U/V before l\n",
-    "front vowel distinctions vs back vowels (pick the same raw number of vowels for front and back)\n",
-    "do phoneme and word level track each other\n",
+    "contribution of the word\\\n",
+    "are certain vowel contrasts more informative than other: open/closed, lax/tense, high/low, individuals\\\n",
+    "phonemes are more likely to merge if they distinguish few minimal pairs: a/c vs. i/I, u/U, U/V\\\n",
+    "I/E before nasal+other consonant or word edge\\\n",
+    "U/u, U/V before l\\\n",
+    "front vowel distinctions vs back vowels (pick the same raw number of vowels for front and back)\\\n",
+    "do phoneme and word level track each other\\\n",
     "diphthongs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
